{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 105,
  "lineage": "dd1058ec-bde1-9702-d631-0d7ac255ee5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9a1120fbf8e80ac",
            "association_id": "eipassoc-010c1dc074d783bdc",
            "domain": "vpc",
            "id": "eipalloc-0e9a1120fbf8e80ac",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b5cbdcec12f29f89",
            "private_dns": "ip-10-0-140-223.ec2.internal",
            "private_ip": "10.0.140.223",
            "public_dns": "ec2-35-170-31-89.compute-1.amazonaws.com",
            "public_ip": "35.170.31.89",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:internet-gateway/igw-04a59c61e19ec7433",
            "id": "igw-04a59c61e19ec7433",
            "owner_id": "247940658137",
            "tags": {
              "Name": "fc-igw"
            },
            "tags_all": {
              "Name": "fc-igw"
            },
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "dependencies": [
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "fc_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9a1120fbf8e80ac",
            "connectivity_type": "public",
            "id": "nat-00095628c1d2e7c88",
            "network_interface_id": "eni-08ca138561e1a5ab6",
            "private_ip": "10.0.8.58",
            "public_ip": "35.170.31.89",
            "subnet_id": "subnet-0870c616d4679c0aa",
            "tags": {
              "Name": "fc-nat"
            },
            "tags_all": {
              "Name": "fc-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:route-table/rtb-02b547159e0636d56",
            "id": "rtb-02b547159e0636d56",
            "owner_id": "247940658137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00095628c1d2e7c88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb"
            },
            "tags_all": {
              "Name": "private_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.fc_nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:route-table/rtb-0456242da3218cf1b",
            "id": "rtb-0456242da3218cf1b",
            "owner_id": "247940658137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a59c61e19ec7433",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rtb"
            },
            "tags_all": {
              "Name": "public_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048b639112a5102e3",
            "route_table_id": "rtb-02b547159e0636d56",
            "subnet_id": "subnet-0e1db2f2682c7fd7a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.fc_nat_gw",
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.flyingclub_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076852422c434d943",
            "route_table_id": "rtb-02b547159e0636d56",
            "subnet_id": "subnet-0739c6b545a3d6608"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.fc_nat_gw",
            "aws_route_table.private_rtb",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f767cc9e078f6b5",
            "route_table_id": "rtb-0456242da3218cf1b",
            "subnet_id": "subnet-0870c616d4679c0aa"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnets",
            "aws_vpc.flyingclub_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc2b83b6b9dbca4e",
            "route_table_id": "rtb-0456242da3218cf1b",
            "subnet_id": "subnet-08263df0123b901de"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnets",
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:subnet/subnet-0e1db2f2682c7fd7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1db2f2682c7fd7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247940658137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_01"
            },
            "tags_all": {
              "Name": "private_subnet_01"
            },
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "dependencies": [
            "aws_vpc.flyingclub_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:subnet/subnet-0739c6b545a3d6608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0739c6b545a3d6608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247940658137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_02"
            },
            "tags_all": {
              "Name": "private_subnet_02"
            },
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "dependencies": [
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:subnet/subnet-0870c616d4679c0aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0870c616d4679c0aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247940658137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_01"
            },
            "tags_all": {
              "Name": "public_subnet_01"
            },
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "dependencies": [
            "aws_vpc.flyingclub_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:subnet/subnet-08263df0123b901de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08263df0123b901de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247940658137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_02"
            },
            "tags_all": {
              "Name": "public_subnet_02"
            },
            "vpc_id": "vpc-06c283f2566f8722b"
          },
          "dependencies": [
            "aws_vpc.flyingclub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flyingclub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247940658137:vpc/vpc-06c283f2566f8722b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1e8a3b06fab5a1e",
            "default_route_table_id": "rtb-024bae86e1c3bfeab",
            "default_security_group_id": "sg-00d392669bef7d17b",
            "dhcp_options_id": "dopt-0b91f249f5331bb16",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06c283f2566f8722b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024bae86e1c3bfeab",
            "owner_id": "247940658137",
            "tags": {
              "Name": "flyingclub-vpc"
            },
            "tags_all": {
              "Name": "flyingclub-vpc"
            }
          }
        }
      ]
    }
  ]
}